--- a/dict/index.html
+++ b/dict/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Словарь Telegram-бота</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <div class="book-container">
         <div class="content-area">
-            <div class="book-header">
-                <div class="book-title">
-                    <i class="fas fa-book"></i> Мой словарь
-                </div>
-                <div class="user-info">
-                    Пользователь ID: <span id="userId">загрузка...</span>
-                </div>
+            <header class="book-header" role="banner">
+                <div class="book-title"><i class="fas fa-book"></i> Мой словарь</div>
+                <div class="user-info">Пользователь ID: <span id="userId">загрузка...</span></div>
+            </header>
+
+            <div class="loading-overlay" id="loadingOverlay" aria-hidden="true">
+                <div class="spinner" aria-hidden="true"></div>
             </div>
 
-            <div class="loading-overlay" id="loadingOverlay">
-                <div class="spinner"></div>
-            </div>
+            <!-- ADD WORD -->
+            <section id="add-word" class="page active" aria-labelledby="add-word-title">
+                <h2 id="add-word-title" class="page-title"><i class="fas fa-plus-circle"></i> Добавить новое слово</h2>
 
-            <div id="add-word" class="page active">
-                <h2 class="page-title"><i class="fas fa-plus-circle"></i> Добавить новое слово</h2>
                 <div class="form-group">
                     <div class="input-row">
                         <div class="input-group">
-                            <label for="newWord"><i class="fas fa-font"></i> Слово (английский)</label>
-                            <input type="text" id="newWord" placeholder="Введите слово">
+                            <label for="newWord"><i class="fas fa-font"></i> Слово (англ.)</label>
+                            <input type="text" id="newWord" placeholder="Введите слово" autocomplete="off" />
                         </div>
                         <div class="input-group">
                             <label for="partOfSpeech"><i class="fas fa-tag"></i> Часть речи</label>
@@ -43,26 +41,26 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="translation"><i class="fas fa-language"></i> Перевод (русский)</label>
-                    <input type="text" id="translation" placeholder="Введите перевод">
-                </div>
-                <button class="btn" id="addWordBtn">
-                    <i class="fas fa-plus"></i> Добавить в словарь
-                </button>
-            </div>
 
-            <div id="search-word" class="page">
-                <h2 class="page-title"><i class="fas fa-search"></i> Поиск перевода</h2>
+                <div class="form-group">
+                    <label for="translation"><i class="fas fa-language"></i> Перевод (рус.)</label>
+                    <input type="text" id="translation" placeholder="Введите перевод" autocomplete="off" />
+                </div>
+
+                <button class="btn" id="addWordBtn"><i class="fas fa-plus"></i> Добавить в словарь</button>
+            </section>
+
+            <!-- SEARCH -->
+            <section id="search-word" class="page" aria-labelledby="search-word-title">
+                <h2 id="search-word-title" class="page-title"><i class="fas fa-search"></i> Поиск перевода</h2>
                 <div class="input-row">
                     <div class="input-group" style="flex: 3;">
-                        <input type="text" id="searchWord" placeholder="Введите слово для поиска">
+                        <input type="text" id="searchWord" placeholder="Введите слово для поиска" autocomplete="off" />
                     </div>
-                    <button class="btn" id="searchBtn" style="flex: 1;">
-                        <i class="fas fa-search"></i> Найти
-                    </button>
+                    <button class="btn" id="searchBtn" style="flex: 1;"><i class="fas fa-search"></i> Найти</button>
                 </div>
-                <div id="searchResult">
+
+                <div id="searchResult" aria-live="polite" style="display: none;">
                     <div class="result-card">
                         <h3>Результат поиска</h3>
                         <div class="word-info">
@@ -72,81 +70,69 @@
                         <p><strong>Перевод:</strong> <span id="resultTranslation"></span></p>
                     </div>
                 </div>
-            </div>
+            </section>
 
-            <div id="all-words" class="page">
-                <h2 class="page-title"><i class="fas fa-book-open"></i> Весь словарь</h2>
-                <button class="btn btn-secondary" id="refreshWordsBtn">
-                    <i class="fas fa-sync"></i> Обновить список
-                </button>
-                <div class="table-container" id="wordsTableContainer">
-                    <div class="loading-overlay" id="wordsLoading">
-                        <div class="spinner"></div>
-                    </div>
-                    <table id="wordsTable">
+            <!-- ALL WORDS -->
+            <section id="all-words" class="page" aria-labelledby="all-words-title">
+                <h2 id="all-words-title" class="page-title"><i class="fas fa-book-open"></i> Весь словарь</h2>
+                <button class="btn btn-secondary" id="refreshWordsBtn"><i class="fas fa-sync"></i> Обновить список</button>
+
+                <div class="table-container" id="wordsTableContainer" role="region" aria-label="Список слов">
+                    <div class="loading-overlay" id="wordsLoading" aria-hidden="true"><div class="spinner" aria-hidden="true"></div></div>
+                    <table id="wordsTable" role="table" aria-labelledby="all-words-title">
                         <thead>
                             <tr>
-                                <th>Слово</th>
-                                <th>Часть речи</th>
-                                <th>Перевод</th>
-                                <th>Действия</th>
+                                <th scope="col">Слово</th>
+                                <th scope="col">Часть речи</th>
+                                <th scope="col">Перевод</th>
+                                <th scope="col">Действия</th>
                             </tr>
                         </thead>
                         <tbody id="wordsList"></tbody>
                     </table>
                 </div>
-            </div>
+            </section>
 
-            <div id="instructions" class="page">
-                <h2 class="page-title"><i class="fas fa-info-circle"></i> Инструкция</h2>
+            <!-- INSTRUCTIONS -->
+            <section id="instructions" class="page" aria-labelledby="instructions-title">
+                <h2 id="instructions-title" class="page-title"><i class="fas fa-info-circle"></i> Инструкция</h2>
                 <div class="result-card">
-                    <h3>Как пользоваться словарем</h3>
-                    <p>1. <strong>Добавление слов</strong>: перейдите на вкладку "Добавить слово", заполните все поля и нажмите кнопку.</p>
-                    <p>2. <strong>Поиск слов</strong>: введите слово в поле поиска и нажмите "Найти".</p>
-                    <p>3. <strong>Просмотр словаря</strong>: на вкладке "Весь словарь" вы увидите все добавленные слова.</p>
-                    <p>4. <strong>Удаление слов</strong>: используйте кнопку "Удалить" рядом с нужным словом.</p>
+                    <h3>Как пользоваться</h3>
+                    <ol>
+                        <li><strong>Добавление:</strong> вкладка "Добавить слово" → заполните поля → нажмите "Добавить".</li>
+                        <li><strong>Поиск:</strong> вкладка "Поиск слова".</li>
+                        <li><strong>Словарь:</strong> вкладка "Весь словарь".</li>
+                        <li><strong>Удаление:</strong> кнопка "Удалить" рядом со словом.</li>
+                    </ol>
                 </div>
-            </div>
+            </section>
 
-            <div id="statistics" class="page">
-                <h2 class="page-title"><i class="fas fa-chart-bar"></i> Статистика</h2>
+            <!-- STATISTICS -->
+            <section id="statistics" class="page" aria-labelledby="statistics-title">
+                <h2 id="statistics-title" class="page-title"><i class="fas fa-chart-bar"></i> Статистика</h2>
                 <div class="result-card">
                     <h3>Ваша статистика</h3>
-                    <div id="statsContent" style="text-align: center; padding: 20px;">
-                        Загрузка статистики...
-                    </div>
+                    <div id="statsContent" style="text-align:center; padding:20px;">Загрузка статистики...</div>
                 </div>
-            </div>
+            </section>
 
-            <div class="book-footer">
+            <footer class="book-footer" role="contentinfo">
                 <p>Telegram Vocabulary Bot &copy; 2025 | Словарь знаний</p>
-            </div>
+            </footer>
         </div>
 
-        <div class="bookmarks-sidebar">
-            <div class="bookmarks-hint" title="Закладки навигации">
-                <i class="fas fa-arrow-left"></i>
-            </div>
-            <div class="bookmark active" data-page="add-word">
-                <i class="fas fa-plus-circle"></i> Добавить слово
-            </div>
-            <div class="bookmark" data-page="search-word">
-                <i class="fas fa-search"></i> Поиск слова
-            </div>
-            <div class="bookmark" data-page="all-words">
-                <i class="fas fa-book-open"></i> Весь словарь
-            </div>
-            <div class="bookmark" data-page="instructions">
-                <i class="fas fa-info-circle"></i> Инструкция
-            </div>
-            <div class="bookmark" data-page="statistics">
-                <i class="fas fa-chart-bar"></i> Статистика
-            </div>
-        </div>
+        <aside class="bookmarks-sidebar" aria-label="Навигация">
+            <div class="bookmarks-hint" title="Навигация"><i class="fas fa-arrow-left"></i></div>
+            <div class="bookmark active" data-page="add-word"><i class="fas fa-plus-circle"></i> Добавить слово</div>
+            <div class="bookmark" data-page="search-word"><i class="fas fa-search"></i> Поиск слова</div>
+            <div class="bookmark" data-page="all-words"><i class="fas fa-book-open"></i> Весь словарь</div>
+            <div class="bookmark" data-page="instructions"><i class="fas fa-info-circle"></i> Инструкция</div>
+            <div class="bookmark" data-page="statistics"><i class="fas fa-chart-bar"></i> Статистика</div>
+        </aside>
     </div>
 
-    <div class="notification" id="notification"></div>
+    <div class="notification" id="notification" role="status" aria-live="polite"></div>
 
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
