--- a/dict/index.html
+++ b/dict/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Словарь Telegram-бота</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css?v=20250826-5" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <div class="book-container">
@@ -139,6 +139,6 @@
         }
     </script>
 
-    <script src="app.js?v=20250826-5"></script>
+    <script src="app.js"></script>
 </body>
 </html>
