added hint 2 POS

--- a/dict/index.html
+++ b/dict/index.html
@@ -54,6 +54,7 @@
                             <i class="fas fa-chevron-right"></i>
                         </div>
                         <select id="partOfSpeech" style="display: none;">
+                            <option value="">Выбрать часть речи</option> <!-- Добавленная строка -->
                             <option value="noun">Существительное</option>
                             <option value="verb">Глагол</option>
                             <option value="adjective">Прилагательное</option>
