removed display of user id

--- a/dict/index.html
+++ b/dict/index.html
@@ -12,7 +12,6 @@
         <div class="content-area">
             <header class="book-header">
                 <div class="book-title"><i class="fas fa-book"></i> Мой словарь</div>
-                <div class="user-info">Пользователь ID: <span id="userId">загрузка...</span></div>
             </header>
 
             <div class="loading-overlay" id="loadingOverlay">
@@ -24,7 +23,7 @@
                 <div class="form-group">
                     <div class="word-input-container">
                         <div class="input-group">
-                            <label for="newWord"><i class="fas fa-font"></i> Слово (англ.)</label>
+                            <label for="newWord"><i class="fas fa-font"></i> Новое слово</label>
                             <div class="input-with-voice">
                                 <input type="text" id="newWord" placeholder="Введите слово" autocomplete="off" />
                                 <button type="button" id="voiceRecordBtn" class="voice-record-btn">
@@ -42,7 +41,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="translation"><i class="fas fa-language"></i> Перевод (рус.)</label>
+                    <label for="translation"><i class="fas fa-language"></i> Перевод слову</label>
                     <input type="text" id="translation" placeholder="Введите перевод" autocomplete="off" />
                 </div>
 
