attempt 2 fix card issues

--- a/dict/index.html
+++ b/dict/index.html
@@ -78,7 +78,7 @@
 
             <!-- SEARCH -->
             <section id="search-word" class="page">
-                <h2 class="page-title"><i class="fas fa-search"></i> Поиск перевода</h2>
+                <h2 class="page-title"><i class="fas fa-search"></i> Найди перевод другого человека </h2>
                 <div class="input-row">
                     <div class="input-group" style="flex: 3;">
                         <input type="text" id="searchWord" placeholder="Введите слово для поиска" autocomplete="off" />
